--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
  	<groupId>br.eti.tiagosousa</groupId>
  	<artifactId>spring-jdbc-jsp-template</artifactId>
- 	<version>1.0.2</version>
+ 	<version>1.0.3</version>
  	<packaging>war</packaging>
  	<name>Spring JDBC JSP Template</name>
  	
@@ -65,6 +65,13 @@
 			<scope>provided</scope>
 		</dependency>
 	
+		<!-- Spring JDBC -->
+		<dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <scope>compile</scope>
+        </dependency>
+	
 		<!-- Spring MVC -->
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -76,6 +83,6 @@
 					<artifactId>commons-logging</artifactId>
 				</exclusion>
 			</exclusions>
-		</dependency>
+		</dependency>		
 	</dependencies>
 </project>
